--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build, test and check format
+name: Build and check format
 
 on: push
 
@@ -15,9 +15,6 @@ jobs:
 
       - name: Build package
         run: yarn build
-
-      - name: Test the package
-        run: yarn test
 
       - name: Check file formatting
         run: yarn format:check
