--- a/package.json
+++ b/package.json
@@ -11,24 +11,12 @@
     "format:check": "prettier --check ."
   },
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./t9n": {
-      "import": "./dist/t9n/index.js",
-      "require": "./dist/t9n/index.cjs",
-      "types": "./dist/t9n/index.d.ts"
-    },
-    "./cli": {
-      "import": "./dist/cli/index.js",
-      "require": "./dist/cli/index.cjs",
-      "types": "./dist/cli/index.d.ts"
-    }
+    "./utils": "./source/utils.js",
+    "./deepl": "./source/deepl.js",
+    "./cli": "./source/cli.js"
   },
   "files": [
-    "dist"
+    "source"
   ],
   "repository": "git@github.com:incubateur-ademe/nsogstesclimat-scripts.git",
   "bugs": "https://github.com/incubateur-ademe/nsogstesclimat-scripts/issues",
@@ -44,6 +32,9 @@
   "dependencies": {
     "@types/node": "^18.11.18",
     "deepl-node": "^1.10.2",
+    "dotenv": "^16.3.1",
+    "isomorphic-fetch": "^3.0.0",
+    "prompt-sync": "^4.2.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
@@ -55,21 +46,6 @@
     "typedoc-plugin-export-functions": "^1.0.0",
     "typescript": "^4.9.4",
     "yaml": "^2.3.1"
-  },
-  "tsup": {
-    "entry": [
-      "source/index.ts",
-      "source/t9n/index.ts",
-      "source/cli/index.ts"
-    ],
-    "format": [
-      "cjs",
-      "esm"
-    ],
-    "allowJs": true,
-    "sourceMap": true,
-    "dts": true,
-    "clean": true
   },
   "publishConfig": {
     "access": "public"
