--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
           node-version: 16
           cache: yarn
       - run: yarn install --immutable
-
-      - name: Build package
-        run: yarn build
+      #
+      # - name: Build package
+      #   run: yarn build
 
       - name: Check file formatting
         run: yarn format:check
