--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^18.11.18",
+    "ansi-colors": "^4.1.3",
     "deepl-node": "^1.10.2",
     "dotenv": "^16.3.1",
     "isomorphic-fetch": "^3.0.0",
