--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
-singleQuote: true
-semi: false
-tabWidth: 2
-trailingComma: 'all'
+{
+  "bracketSpacing": true,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "tabWidth": 2
+}
