--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.8.0",
   "description": "Set of common code used both in the website and the model repository of NGC",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "tsup",
     "watch": "tsup --watch",
     "clean": "rm -rf dist docs",
@@ -51,5 +52,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "pnpm@10.11.0"
 }
