--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061
+      - name: Use Node.js
+        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f
         with:
-          node-version: 16
-          cache: yarn
-      - run: yarn install --immutable
-      #
-      # - name: Build package
-      #   run: yarn build
-
+          node-version-file: './package.json'
+          cache: 'pnpm'
+      - run: pnpm install --immutable
       - name: Check file formatting
-        run: yarn format:check
+        run: pnpm format:check
