--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.11.0",
+  "engines": {
+    "node": "^22"
+  }
 }
