--- a/.github/workflows/packaging.yaml
+++ b/.github/workflows/packaging.yaml
@@ -67,14 +67,19 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
-      - uses: actions/setup-node@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v6
         with:
+          node-version-file: './package.json'
+          cache: 'pnpm'
           registry-url: https://registry.npmjs.org/
-      - uses: bahmutov/npm-install@v1
+      - run: pnpm install --immutable
       # - run: yarn build
       - name: Publishing on NPM
         run: |
-          if [ "$(npm show . version)" = "$VERSION" ]; then
+          if [ "$(pnpm show . version)" = "$VERSION" ]; then
             echo "This version is already published"
             exit 0
           fi
@@ -86,7 +91,7 @@ jobs:
           if [ "$IS_PRE_RELEASE" = "true" ]; then
               EXTRA_ARGS="--tag next"
           fi
-          npm publish $EXTRA_ARGS
+          pnpm publish $EXTRA_ARGS
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           VERSION: ${{ needs.check_if_version_upgraded.outputs.to_version }}
